<resources>
    <string name="app_name">BRMLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synchronize">Синхронизировать</string>
    <string name="Main">Главная</string>
    <string name="data_base_doctor">Врачи</string>
    <string name="advertisment_movies">Рекламные ролики</string>
    <string name="exit">Выход</string>
    <string name="verify_text">Пожалуйста введите код страны \n и номер телефона для верефикации</string>
    <string name="alert_dialog_start_message">Хотите начать визит? \nНе закрывайте приложения во время визита, иначе визит не будет считаться</string>
    <string name="data_base_pharmacy">Аптеки</string>
    <string name="verification">Ожидайте верификации...</string>
    <string name="Input_text">Введите текст</string>
    <string name="delete_note">Удалить запись?</string>
    <string name="map_key" translatable="false">AIzaSyDqiVKAGJip9YKtPsPIujsuTtgi6h1qRY0</string>
    <string name="preparat">Выберите препарат</string>
    <string name="add_label">Добавить</string>
    <string name="dismiss_label">Отменить</string>
    <string name="clear_label">Очистить</string>
    <string name="bonus_system">Бонусная система</string>
    <string name="local_chat">Внутренний чат</string>
    <string name="contacts">Обратная связь</string>
    <string name="done">Готово</string>
    <string name="pay100">100%</string>
    <string name="pay50">50%</string>
    <string name="pay25">25%</string>
    <string name="update_text">Загружаем хорошее настроение</string>
    <string name="brmlab_czech_republic">BRMLab Czech Republic</string>
    <string name="medications">Препараты</string>
    <string name="comment">Коментарий</string>
    <string name="ready">Готово</string>
    <string name="permission_text">Нажмите готово, после выдачи всех необходимых прав для приложения \n (Если ничего не всплывает, включите разрешения в настройках)</string>
    <string name="stock">Остаток</string>
    <string name="order">Бронь</string>
    <string name="category">Категория</string>
    <string name="extra_information">Дополнительная информация</string>
    <string name="choose">Выбрать</string>
    <string name="medication">Препарат</string>
    <string name="comments">Коментарии к визиту</string>
    <string name="free_comment">Коментарии в свободной форме</string>


    <string-array name="categoryOfMission">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="statusOfMission">
        <item>Активный</item>
        <item>Не активный</item>
    </string-array>

    <string-array name="tashSirdarya">
        <item>Ташкентская область</item>
        <item>Сырдаринская область</item>
    </string-array>
    <string-array name="navoyiBuhoro">
        <item>Навоинская область</item>
        <item>Бухарская область</item>
    </string-array>
    <string-array name="startText">
        <item>Загружаем хорошее настроение!</item>
        <item>Хорошего дня!</item>
        <item>Настраиваем улыбочки!</item>
        <item>Подгружаем кофе!</item>
        <item>Улыбнитесь! :)</item>
        <item>Пунктуальность - залог хороших отношений!</item>
    </string-array>
</resources>
