<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".activities.MainActivity"
    android:paddingBottom="10dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F4F4"
            android:id="@+id/activity_doctor_information_ll1">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@color/blue_dark"
                android:layout_height="170dp">

                <TextView
                    android:id="@+id/titlepage"
                    android:layout_marginTop="20dp"
                    android:textSize="22sp"
                    android:textColor="#FFF"
                    android:text="@string/extra_information"
                    android:textAlignment="center"
                    android:layout_marginBottom="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:background="#131E69"
                    android:layout_height="0.5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="-60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgitemdoes"
                android:orientation="vertical"
                android:paddingBottom="22dp"
                android:paddingTop="22dp">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/category"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/doctor_information_category_button"
                        android:text="@string/choose"
                        android:textColor="#FFF"
                        android:textAllCaps="false"
                        android:background="@drawable/bgbtnblue"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/doctor_information_ll2">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/medication"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/doctor_information_choose_button"
                        android:text="@string/choose"
                        android:textColor="#FFF"
                        android:textAllCaps="false"
                        android:background="@drawable/bgbtnblue"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:clickable="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/comments"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/doctor_information_comment_edit_text"
                        android:inputType="text"
                        android:background="@drawable/bginputtask"
                        android:paddingLeft="@dimen/margin15dp"
                        android:paddingRight="@dimen/margin15dp"
                        android:textColorHint="@color/textGrey"
                        android:maxLength="100"
                        android:textColor="@color/colorPrimaryDark"
                        android:hint="@string/free_comment"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:autofillHints="" />

                </LinearLayout>

            </LinearLayout>
            <Button
                android:id="@+id/doctor_information_button_add"
                android:text="@string/ready"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:background="@drawable/bgbtncreate"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp" />



        </LinearLayout>

    </ScrollView>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/doctor_information_progress_bar"
        android:layout_width="@dimen/circular40dp"
        android:layout_height="@dimen/circular40dp"
        app:cpv_animAutostart="true"
        app:cpv_indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
