<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgitemdoes"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin5dp"
        >
        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin15dp"
                android:id="@+id/activity_order_radio_group"

                >
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay100"
                    android:layout_weight="1"
                    android:id="@+id/activity_order_radio_100"
                    android:onClick="radioButton"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay50"
                    android:layout_weight="1"
                    android:id="@+id/activity_order_radio_50"
                    android:onClick="radioButton"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay25"
                    android:layout_weight="1"
                    android:id="@+id/activity_order_radio_25"
                    android:onClick="radioButton"/>
            </RadioGroup>
            <TextView
                android:id="@+id/activity_order_final_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="@dimen/text15sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgitemdoes"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="Остаток"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_order_new_order_recycler_view"
                />

        </LinearLayout>


    </LinearLayout>
    <com.github.rahatarmanahmed.cpv.CircularProgressView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_order_circle_progress_bar"
        android:layout_width="@dimen/circular40dp"
        android:layout_height="@dimen/circular40dp"
        app:cpv_animAutostart="true"
        app:cpv_indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <Button
        android:id="@+id/activity_order_button_add"
        android:text="Готово"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@drawable/bgbtncreate"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>

</LinearLayout>